# caliscope

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  EPIC_constellation.md  LICENSE  LICENSE.md  README.md  basic_functions.py  calibrate_single_camera.py  calibrate_stereoscopic_images.txt  calibration_images.py  cam_0_calibration.json  capture_volume_stage_0.pkl  capture_volume_stage_1.pkl  capture_volume_stage_2.pkl  charuco.json  config.toml  data.db  draw_images.py  frame_data.json  gui.py  index.html  mkdocs.yml  pyproject.toml  read.py  read_charuco.py  read_single_charuco_frame.py  read_stereoscopic_images.py  reading_img_vid.py  requirements.txt  resize_rescale.py  resolutions.xlsx  sitemap.xml  syncing_workthrough.xlsx  test.json  test_json
.github/: dependabot.yml
.github/workflows/: ci.yaml  draft-pdf.yml  mkdocs.yaml  publish_to_pypi_when_new_tag_is_pushed_to_main.yml  pytest.yml
Photos/: IMG_0105.HEIC  IMG_1197.HEIC  IMG_1656.HEIC  IMG_2299.HEIC  IMG_3127.HEIC  IMG_3485.HEIC
anipose_videos/calibration/: calibration.toml
aruco_calibration_set/: index.html
calibration_board/: index.html
calibration_targets/: index.html
calicam/: __init__.py  __main__.py  calicam.py  logger.py  scratch_session_config.py  session.py
calicam/calibration/: bulk_monocalibrator.py  charuco.py  corner_tracker.py  draw_charuco.py  monocalibrator.py  omnicalibrator.py  stereocalibrator.py  stereotracker.py
calicam/cameras/: camera.py  camera_array.py  camera_array_builder.py  data_packets.py  live_stream.py  pyav_sandbox.py  synchronizer.py
calicam_wizard_mockup/: index.html
caliscope/: __init__.py  __main__.py  configurator.py  controller.py  export.py  helper.py  intrinsic_stream_manager.py  logger.py  motion_trial.py  packets.py  persistence.py  startup.py  synchronized_stream_manager.py  tracker.py  workspace_guide.py
data_capture/: index.html
default_1_cam_session/: config.toml
default_session/: config.toml
dev/: auto_gui.py  config.toml  demo_gui_calibration.py  demo_gui_recording.py  dev_autorig_config_json.py  dev_camera_display_widget.py  dev_configurator.py  dev_cross_corr_sync.py  dev_export.py  dev_face_map.py  dev_fmc_to_trc.py  dev_full_pipeline_for_gui.py  dev_labelled_xyz.py  dev_low_pass_filter.py  dev_playback_widget.py  dev_post_processer.py  dev_prep_sync_test_data.py  dev_real_time_triangulator.py  dev_real_time_triangulator_bigger_numba.py  dev_recalibrate_from_xy.py  dev_recording_dir.py  dev_revised_point_estimate_storage.py  dev_session_state_check.py  dev_xy_csv_process.py  dev_xy_gap_fill.py  dev_xy_to_xyz.py  get_files.py  gui_main.py  gui_recording.py  link_stereopairs.py  min_rep_succeeding.py  traffic.csv
docs/: CNAME  LICENSE.md  aruco_calibration_set.md  calibration.md  calibration_board.md  calibration_targets.md  data_capture.md  doc_notes.md  extrinsic_calibration.md  extrinsic_calibration_reference.md  faq.md  file_layout.md  home.md  index.md  installation.md  intrinsic_calibration.md  onnx_trackers.md  post_processing.md  project_notes.md  project_setup.md  project_structure.md  reconstruction.md  requirements.md  roadmap.md  sample_data.md  sample_project.md  scripting.md  triangulation_api.md  video_capture.md  workspace.md  workspace_setup.md
extrinsic_calibration/: index.html
extrinsic_calibration_reference/: index.html
faq/: index.html
gui_wizard/: READ_ME.md
installation/: index.html
intrinsic_calibration/: index.html
mkdocs_notes/: index.html
onnx_trackers/: index.html
paper/: paper.bib  paper.md  pyxy3d.bib
please work/: frame_time_history.csv  point_data.csv
post_processing/: index.html
project_setup/: index.html
pyopengl/: first_person_camera.py  game.py  spinning_cube.py
pyxy3d/: __init__.py  __main__.py  _version.py  configurator.py  controller.py  export.py  export_xyz.py  extrinsic_stream_manager.py  helper.py  interface.py  intrinsic_stream_manager.py  logger.py  motion_trial.py  packets.py  playback_frame_emitter.py  post_processing_pipelines.py  post_processor.py  session.py  synchronized_stream_manager.py  tracker.py  triangulation.py  workspace_guide.py
pyxyfy/: __init__.py  __main__.py  logger.py  session.py
reconstruction/: index.html
requirements/: index.html
roadmap/: index.html
sample_project/: index.html
scripting/: index.html
scripts/: benchmark_frame_seeking.py  demo_api.py  troubleshoot_camera_array.py  troubleshoot_point_estimates.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
specs/: chessboard-aruco-calibration.md  epic-scriptable-core-plan.md  scriptable-calibration-api.md
src/: 3D_Plotting.ipynb  camera.py  charuco.py  configurator.py  main.py  recorder.py  session.py  stereocamera.py  test_threading.py  toml_test.py  tracked_points.csv  triangulate.py
test3dQt/: README.md  simpleQt3d.py  test.py
test_session/: config 1.toml  config 2.toml  config copy.toml  config.toml
tests/: conftest.py  copy_old_test_set_origin.py  demo_calibrate_session.py  dev_real_time_triangulator.py  dev_real_time_triangulator_charuco.py  dev_real_time_triangulator_mediapipe_hands.py  oracle_ffmpeg.py  set_origin_functions.py  test_alignment.py  test_aniposelib_export.py  test_api.py  test_aruco_marker.py  test_aruco_target.py  test_aruco_tracker.py  test_blender_export.py  test_bundle_parameterization.py  test_calibrate_extrinsics.py  test_calibrate_intrinsics.py  test_calibrate_session.py  test_calibration.py  test_calibration_equivalence.py  test_camera_array.py  test_camera_array_builder.py  test_camera_array_initilizer.py  test_cancellation_token.py  test_capture_volume.py  test_capture_volume_anchoring.py  test_capture_volume_transformation.py  test_charuco.py  test_charuco_tracker.py  test_chatgpt_craziness.py  test_chessboard.py  test_configurator.py  test_constraints.py  test_controller.py  test_display_grayscale.py  test_export.py  test_frame_selector.py  test_frame_source.py  test_frame_source_gray.py  (+67 more)
triangulation_api/: index.html
video_capture/: index.html
videos/: charuco.mkv
workspace/: index.html
(+1309 files in other folders)
