[project]
name = "caliscope"
version = "0.6.9"
description = "GUI based multicamera calibration that integrates with 2D landmark tracking to triangulate 3D landmark positions"
authors = [{name = "Mac Prible", email = "prible@gmail.com"}]
license = { text = "BSD-2-Clause" }
readme = "README.md"
requires-python = ">=3.10,<3.13" # note that mediapipe will not currently run on macOS for python >= 3.13

dependencies = [
    "pandas>=1.5.0",
    "scipy>=1.10.1",
    "pyqtgraph>=0.13.2",
    "PyOpenGL>=3.1.6",
    "numba>=0.57.0",
    "pyside6>=6.5.2",
    "opencv-contrib-python>=4.8.0.74",
    "rtoml>=0.9.0",
    "pyarrow>=15.0.0",
    "platformdirs>=4.3.8",
    "mediapipe>=0.10.20",
    "pandera>=0.26.1",
    "pyvista>=0.46.4",
    "pyvistaqt>=0.11.3",
]


[project.urls]
repository = "https://github.com/mprib/caliscope"

[project.scripts]
caliscope = "caliscope.__main__:CLI_parser"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "**/*.mp4",       # Or just nuke all video files by extension
]

[tool.hatch.build.targets.wheel]
packages = ["src/caliscope"]

[tool.hatch.build.targets.wheel.source]
"src" = ""

[tool.ruff]
line-length = 120
target-version = "py311"
unsafe-fixes = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "dev",
]


[tool.ruff.lint]
select = ["E", "F", "W"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"

# Use spaces for indentation.
indent-style = "space"

# Respect the magic trailing comma.
skip-magic-trailing-comma = false

# Normalize line endings to LF for consistency across operating systems.
line-ending = "lf"

[tool.basedpyright]
typeCheckingMode = "standard"

[tool.basedpyright.analysis]
# These stop the "Unknown/Partially Known" noise from third-party libs
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownReturnType = false
reportUnknownLambdaType = false
reportPartiallyUnknownMemberType = false
reportPartiallyUnknownVariableType = false
reportPartiallyUnknownArgumentType = false
reportPartiallyUnknownParameterType = false
reportPartiallyUnknownReturnType = false
reportPartiallyUnknownLambdaType = false
reportUnannotatedClassAttribute = false
reportMissingTypeStubs = false
reportAny = false

diagnosticMode = "openFilesOnly"

[dependency-groups]
dev = [
    "pytest>=7.3.0",
    "pytest-xdist>=3.8.0",
    "pre-commit>=4.3.0",
    "ipykernel>=6.22.0",
    "pymdown-extensions>=9.11,<11.0",
    "mkdocs-material>=9.1.6",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "ruff>=0.6.5",
    "pre-commit",
    "openpyxl",
    "pywinctl",
]
